--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -42,15 +42,24 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:
+    image: redis:7.2.5-alpine
+    container_name: korunio_redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
   auth-service:
     build:
       context: ../../backend
       dockerfile: auth-service/Dockerfile
     container_name: korunio_auth_service
-    environment:
-      KORUN_KAFKA_BROKERS: kafka:29092
-      KORUN_LOGGER_LEVEL: debug
-      KORUN_LOGGER_FORMAT: json
     ports:
       - "8081:8081"
     volumes:
@@ -60,6 +69,9 @@ services:
         condition: service_healthy
       kafka:
         condition: service_started
+      redis:
+        condition: service_healthy
 
 volumes:
   postgres_data:
+  redis_data:
